config: Setting DB schema

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,7 @@ server.port=8080
 spring.datasource.url= postgres://slszhbin:DlJbVwsunjBVnKw7Q4gwPvppEErOjBs2@salt.db.elephantsql.com/slszhbin
 spring.datasource.username= slszhbin
 spring.datasource.password= DlJbVwsunjBVnKw7Q4gwPvppEErOjBs2
+
 spring.jpa.hibernate.ddl-auto= update
+spring.jpa.properties.hibernate.default_schema= ms-email
 
