--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
-server.port=8080
+spring.jpa.database=POSTGRESQL
+spring.sql.init.platform=postgres
 
-spring.datasource.url= postgres://slszhbin:DlJbVwsunjBVnKw7Q4gwPvppEErOjBs2@salt.db.elephantsql.com/slszhbin
-spring.datasource.username= slszhbin
-spring.datasource.password= DlJbVwsunjBVnKw7Q4gwPvppEErOjBs2
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.database.driverClassName=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto= update
-spring.jpa.properties.hibernate.default_schema= ms-email
 
+spring.datasource.url=jdbc:postgresql://salt.db.elephantsql.com:5432/slszhbin
+spring.datasource.username=slszhbin
+spring.datasource.password=DlJbVwsunjBVnKw7Q4gwPvppEErOjBs2
+
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.default_schema=ms_email
