--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.database.driverClassName=org.postgresql.Driver
 
 
 spring.datasource.url=jdbc:postgresql://salt.db.elephantsql.com:5432/slszhbin
-spring.datasource.username=slszhbin
-spring.datasource.password=DlJbVwsunjBVnKw7Q4gwPvppEErOjBs2
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.properties.hibernate.default_schema=ms_email
@@ -19,3 +19,6 @@ spring.mail.username=
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.rabbitmq.addresses=
+spring.rabbitmq.template.default-receive-queue=ms.email
